<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bodyfat"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_bodyfat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_bodyfat"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <EditText
        android:id="@+id/et_age"
        android:layout_width="268dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_bage"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_age"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bodyfat"
        android:layout_marginRight="44dp" />

    <EditText
        android:id="@+id/et_neck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_neck"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_neck"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_age"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_age"
        app:layout_constraintTop_toBottomOf="@+id/et_age" />

    <EditText
        android:id="@+id/et_waist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_waist"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_waist"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_neck"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_neck"
        app:layout_constraintTop_toBottomOf="@+id/et_neck" />

    <EditText
        android:id="@+id/et_hip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_hip"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_hip"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_waist"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_waist"
        app:layout_constraintTop_toBottomOf="@+id/et_waist" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/btn_bg"
        android:onClick="CalculateBodyFat"
        android:text="@string/btn_calculate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hip"
        android:layout_marginLeft="48dp" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="@string/tv_age"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bodyfat"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/tv_neck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_neck"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_waist"
        android:layout_width="59dp"
        android:layout_height="26dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:text="@string/tv_waist"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_neck"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/tv_hip"
        android:layout_width="40dp"
        android:layout_height="43dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/tv_hip"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_waist"
        android:layout_marginLeft="28dp" />

    <TextView
        android:id="@+id/tv_calculate"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_calculate"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>