<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalActivity"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/tv_height"
        android:layout_width="188dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_height"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/weight"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="@+id/weight"
        app:layout_constraintTop_toBottomOf="@+id/weight" />

    <TextView
        android:id="@+id/tv_bmi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/tv_bmi"
        android:textColor="@color/colorWhite"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_weight"
        android:layout_width="173dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:gravity="center_horizontal"
        android:text="@string/tv_weight"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bmi" />

    <EditText
        android:id="@+id/height"
        android:layout_width="233dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_bbg"
        android:drawableLeft="@drawable/ic_height"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/tv_height"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/tv_height"
        app:layout_constraintTop_toBottomOf="@+id/tv_height" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="226dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bbg"
        android:drawableLeft="@drawable/ic_bweight"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/tv_weight"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="@+id/tv_weight"
        app:layout_constraintTop_toBottomOf="@+id/tv_weight" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="235dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_bbg"
        android:onClick="CalculateBMI"
        android:text="@string/calculate_button"
        app:layout_constraintEnd_toEndOf="@+id/height"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/height"
        app:layout_constraintTop_toBottomOf="@+id/height" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/result"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/calculate_button"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/calculate_button" />
</androidx.constraintlayout.widget.ConstraintLayout>