<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_vview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Registration">

    <TextView
        android:id="@+id/tv_vregister"
        android:layout_width="145dp"
        android:layout_height="34dp"
        android:text="Registration"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/et_vname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/input_vbg"
        android:drawableLeft="@drawable/ic_vname"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_vname"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vregister" />

    <EditText
        android:id="@+id/et_vadd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_vbg"
        android:drawableLeft="@drawable/ic_vaddress"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_vadd"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_vphone"
        app:layout_constraintStart_toStartOf="@+id/et_vphone"
        app:layout_constraintTop_toBottomOf="@+id/et_vphone" />

    <EditText
        android:id="@+id/et_vdis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_vbg"
        android:drawableLeft="@drawable/ic_vaddress"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_vdis"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_vadd"
        app:layout_constraintStart_toStartOf="@+id/et_vadd"
        app:layout_constraintTop_toBottomOf="@+id/et_vadd" />

    <EditText
        android:id="@+id/et_nic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_vbg"
        android:drawableLeft="@drawable/ic_vnic"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_vnic"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_vdis"
        app:layout_constraintStart_toStartOf="@+id/et_vdis"
        app:layout_constraintTop_toBottomOf="@+id/et_vdis" />

    <EditText
        android:id="@+id/et_vphone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_vbg"
        android:drawableLeft="@drawable/ic_vphone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_vphone"
        android:inputType="phone"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_vname"
        app:layout_constraintStart_toStartOf="@+id/et_vname"
        app:layout_constraintTop_toBottomOf="@+id/et_vname" />

    <EditText
        android:id="@+id/et_vdose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/input_vbg"
        android:drawableLeft="@drawable/ic_vdose"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_vdose"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_nic"
        app:layout_constraintStart_toStartOf="@+id/et_nic"
        app:layout_constraintTop_toBottomOf="@+id/et_nic" />

    <EditText
        android:id="@+id/et_alldis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_vbg"
        android:drawableLeft="@drawable/ic_vallergie"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_aldis"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_vdose"
        app:layout_constraintStart_toStartOf="@+id/et_vdose"
        app:layout_constraintTop_toBottomOf="@+id/et_vdose" />

    <Button
        android:id="@+id/btn_vregister"
        android:layout_width="114dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/btn_vnext"
        android:text="@string/btn_vregister"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintEnd_toEndOf="@+id/et_alldis"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="@+id/et_alldis"
        app:layout_constraintTop_toBottomOf="@+id/et_alldis" />

    <Button
        android:id="@+id/btn_view"
        android:layout_width="119dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_vnext"
        android:text="@string/btn_view"
        app:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/et_alldis"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="@+id/et_alldis"
        app:layout_constraintTop_toBottomOf="@+id/et_alldis" />

</androidx.constraintlayout.widget.ConstraintLayout>