<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterForm"
    android:background="@drawable/back">


    <TextView
        android:id="@+id/tv_register"
        android:layout_width="345dp"
        android:layout_height="56dp"
        android:text="@string/tv_register"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.757"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <EditText
        android:id="@+id/et_gender"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_dbg"
        android:drawableLeft="@drawable/ic_gender"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_gender"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_license"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_dbg"
        android:drawableLeft="@drawable/ic_license"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_license"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/teal_200"
        app:layout_constraintEnd_toEndOf="@+id/et_name"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_name"
        app:layout_constraintTop_toBottomOf="@+id/et_name"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_dbg"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_license"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_license"
        app:layout_constraintTop_toBottomOf="@+id/et_license"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_speciality"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_dbg"
        android:drawableLeft="@drawable/ic_speciality"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_speciality"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_pnumber"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_pnumber"
        app:layout_constraintTop_toBottomOf="@+id/et_pnumber"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_dbg"
        android:drawableLeft="@drawable/ic_language"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_language"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_speciality"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_speciality"
        app:layout_constraintTop_toBottomOf="@+id/et_speciality"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="349dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_dbg"
        android:drawableLeft="@drawable/ic_name"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/et_pnumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_dbg"
        android:drawableLeft="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/et_pnumber"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/et_gender"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_gender"
        app:layout_constraintTop_toBottomOf="@+id/et_gender"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btn_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_dbg"
        android:backgroundTint="@color/colorWhite"
        android:hapticFeedbackEnabled="false"
        android:shadowColor="@color/colorWhite"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="@+id/et_language"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="@+id/et_language"
        app:layout_constraintTop_toBottomOf="@+id/et_language"
        app:rippleColor="@color/colorWhite" />

    <Button
        android:id="@+id/btn_h2"
        android:layout_width="89dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_dbg"
        android:backgroundTint="@color/teal_200"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toEndOf="@+id/btn_privacy"
        app:layout_constraintTop_toBottomOf="@+id/et_language" />

</androidx.constraintlayout.widget.ConstraintLayout>